Basic first version in place, just need to do the home page and the og iamge

--- a/scripts/page_builder/template_chrome.html
+++ b/scripts/page_builder/template_chrome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0.2;URL='2.html'" />
+    <meta http-equiv="refresh" content="0.2;URL='$next_frame.html'" />
     <meta http-equif="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation - Chrome</title>
   </head>
@@ -41,25 +41,7 @@
       </table>
       <font color="#dddddd" size="1">
         <pre><code>
-    
-                                                        
-                                , * :                   
-                                ; # ;                   
-                              + % +         , ;         
-                            ; # # ? ,   , * S S *       
-                    ,       ; * + + ? ; S # # # # *     
-      , , , : : ; ? S % ? ? ? + ; ? # # # # S ? % S +   
-      ? # # % ? S # # @ # # S # ? * ? S S % :   , + +   
-      + ? : , : S S % S # # % S ? * ? % S *             
-                ? # % S # # # S # # S ? ? ,             
-              : ? S S % : + % S # # # % :               
-              ? * * ? ,       , * # % ;                 
-              , ; * + ,       , ? % :                   
-                , ; , + ;   , ? + ; :                   
-                  :     ; , + + ; ; ,                   
-                        , * :                           
-, , , , , , , , , , , : * ; , , , , , , , , , , , , , , 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+    $the_ascii
     </code></pre>
       </font>
     </center>
