--- a/scripts/page_builder/template_safari.html
+++ b/scripts/page_builder/template_safari.html
@@ -7,34 +7,34 @@
   </head>
   <body bgcolor="#06113C">
     <center>
-      <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc">alanwsmith.com</font></a
+      <font color="#cccccc" size="2">Safari/Firefox Version</font>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/frames-chrome/1.html"
+        ><font color="#cccccc" size="2">Chrome Version</font></a
       >
-      <font color="#777777"> ~ </font>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="https://www.alanwsmith.com/"
+        ><font color="#cccccc" size="2">alanwsmith.com</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
 
       <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc">links</font></a
+        ><font color="#cccccc" size="2">links</font></a
       >
-      <font color="#777777"> ~ </font>
+      <font color="#777777" size="2"> ~ </font>
       <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc">podcast</font></a
+        ><font color="#cccccc" size="2">podcast</font></a
       >
       <br />
-      <font color="#777777"> ------ </font>
+      <font color="#777777" size="2"> ------ </font>
       <table>
         <tr>
-          <td>
+          <td width="440">
             <font color="#cccccc">
-              This is an experiment in using only HTML (without JavaScript, CSS,
-              <br />or images) to create an animation. You can read more about
-              <br />it
-              <a href="/about.html"><font color="#cccccc">here</font></a> ~ If
-              you're using chrome
-              <a href="/frames-chrome/1.html"
-                ><font color="#cccccc"
-                  >click here for a smoother version</font
-                ></a
-              >
+              This piece is an experiment in creating an animation using only
+              HTML. There is no JavaScript, CSS, or images involved. You can
+              read more about it
+              <a href="/about.html"><font color="#cccccc">here</font></a>
             </font>
           </td>
         </tr>
@@ -44,7 +44,12 @@
     $the_ascii
     </code></pre>
       </font>
-      <a href="/stop.html"><font color="#cccccc">stop the animation</font></a>
+      <font color="#cccccc" size="2">
+        If you're using chrome
+        <a href="/frames-chrome/1.html"
+          ><font color="#cccccc">click here for a smoother version</font></a
+        >
+      </font>
     </center>
   </body>
 </html>
