--- a/site/about.html
+++ b/site/about.html
@@ -5,17 +5,25 @@
   </head>
   <body bgcolor="#06113C">
     <center>
-      <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc">alanwsmith.com</font></a
+      <a href="/frames/1.html"
+        ><font color="#cccccc" size="2">Safari/Firefox Version</font></a
       >
-      <font color="#777777"> ~ </font>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/frames-chrome/1.html"
+        ><font color="#cccccc" size="2">Chrome Version</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
+      <a href="https://www.alanwsmith.com/"
+        ><font color="#cccccc" size="2">alanwsmith.com</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
 
       <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc">links</font></a
+        ><font color="#cccccc" size="2">links</font></a
       >
-      <font color="#777777"> ~ </font>
+      <font color="#777777" size="2"> ~ </font>
       <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc">podcast</font></a
+        ><font color="#cccccc" size="2">podcast</font></a
       >
       <br />
       <font color="#777777"> ------ </font>
@@ -24,37 +32,49 @@
           <td width="440">
             <font color="#cccccc">
               <p>
-                This piece consists of eight frames of ascii art based on
-                &quot;<a
-                  href="https://en.wikipedia.org/wiki/The_Horse_in_Motion"
-                  ><font color="#cccccc">The Horse in Motion</font></a
-                >&quot; by Eadweard Muybridge
-              </p>
-              <p>
-                Animation between frames is done with `&lt;meta
-                http-equiv=&quot;refresh&quot;&gt;` tags. Chrome allows times
-                less than a second (e.g. '0.3') which would provide a smoother
-                animation, but Safari and Firefox require whole seconds. So,
-                this version is at 1fps
-              </p>
-              <p>
-                If you're in Chrome, you can check out the smoother version here
-              </p>
-              <p>
-                I put together a other HTML only sites with
-                <a href="https://ascii-art.alanwsmith.com/">ascii art</a>,
-                <a href="https://pixel-art.alanwsmith.com/">pixel art</a>,
-                <br />and
-                <a href="https://html-maze.alanwsmith.com/">a maze</a>
+                This piece is an experiment in creating an animation using only
+                HTML. There is no JavaScript, CSS, or images involved
               </p>
 
               <p>
-                Inspiration for this project came from
-                <a href="https://twitter.com/whitep4nth3r">whitep4nth3r's</a>
-                call for<br />
+                The frames consists of ascii art based on &quot;<a
+                  href="https://en.wikipedia.org/wiki/The_Horse_in_Motion"
+                  ><font color="#cccccc">The Horse in Motion</font></a
+                >&quot; by Eadweard Muybridge. Animation between frames is done
+                with `&lt;meta http-equiv=&quot;refresh&quot;&gt;` tags. As of
+                April, 2022, Safari and Firefox require whole seconds for the
+                refresh. So, the
+                <a href="/frames/1.html"
+                  ><font color="#cccccc">basic version</font></a
+                >
+                is a set of eight frames running at 1FPS
+              </p>
+              <p>
+                Chrome allows refresh times less than a second.
+                <a href="/frames-chrome/1.html"
+                  ><font color="#cccccc">That version</font></a
+                >
+                is sixteen frames set to change every 0.2 seconds which runs at
+                roughly 5FPS depending on the computer, network, etc...
+              </p>
+              <p>
+                This site is the forth in a series inspired by
                 <a
                   href="https://twitter.com/whitep4nth3r/status/1510568114966171649"
-                  >HTML only sites</a
+                  ><font color="#cccccc">this tweet</font></a
+                >
+                from
+                <a href="https://twitter.com/whitep4nth3r"
+                  ><font color="#cccccc">whitep4nth3r</font></a
+                >. The other sites are:
+                <a href="https://ascii-art.alanwsmith.com/"
+                  ><font color="#cccccc">ascii art</font></a
+                >,
+                <a href="https://pixel-art.alanwsmith.com/"
+                  ><font color="#cccccc">pixel art</font></a
+                >, and a
+                <a href="https://html-maze.alanwsmith.com/"
+                  ><font color="#cccccc">maze</font></a
                 >
               </p>
             </font>
