--- a/site/frames-chrome/10.html
+++ b/site/frames-chrome/10.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0.1;URL='11.html'" />
+    <meta http-equiv="refresh" content="0.2;URL='11.html'" />
     <meta http-equif="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
-    <title>HTML Animation</title>
+    <title>HTML Animation - Chrome</title>
   </head>
   <body bgcolor="#06113C">
     <center>
+      <a href="/frames/1.html">
+        <font color="#cccccc" size="2">Safari/Firefox Version</font></a
+      ><font color="#777777" size="2"> ~ </font>
+      <font color="#cccccc" size="2">Chrome Version</font>
+      <font color="#777777" size="2"> ~ </font>
       <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc">alanwsmith.com</font></a
+        ><font color="#cccccc" size="2">alanwsmith.com</font></a
       >
-      <font color="#777777"> ~ </font>
+      <font color="#777777" size="2"> ~ </font>
 
       <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc">links</font></a
+        ><font color="#cccccc" size="2">links</font></a
       >
-      <font color="#777777"> ~ </font>
+      <font color="#777777" size="2"> ~ </font>
       <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc">podcast</font></a
+        ><font color="#cccccc" size="2">podcast</font></a
       >
       <br />
       <font color="#777777"> ------ </font>
       <table>
         <tr>
-          <td>
+          <td width="440">
             <font color="#cccccc">
-              This is an experiment in using only HTML (without JavaScript, CSS,
-              <br />or images) to create an animation. You can read more about
-              <br />it
-              <a href="/about.html"><font color="#cccccc">here</font></a>
+              This version of the animation works with Chrome browsers that
+              accept floating point numbers for the meta refresh. You can read
+              more about how this works
+              <a href="/about.html"><font color="#cccccc">here</font></a> (you
+              may have to click the link a few times to get it to work)
             </font>
           </td>
         </tr>
@@ -36,36 +42,26 @@
       <font color="#dddddd" size="1">
         <pre><code>
     
-                                              ,                                 
-                                            : S +                               
-                                            + @ *                               
-                                          ; S % :                               
-                                        + # S :                                 
-                                      + # # @ S :             , ,               
-                                    , % # @ + ? @ *     ; ? S # # + + :         
-                                    , , ; +     * @ % ? @ @ @ @ # @ @ *         
-                                    , : ,   : * % # @ @ @ # # # @ @ @ S ,       
-    , ; : , : : : , , : ; ; : , , , , ; ; , ? % ? % # # # # S @ @ @ # # ;       
-    : @ # # @ @ S + S # # # # # S # # # S : : ? % % * S @ S % % + * @ @ *       
-    , # # ? + + : ; S # @ # # # # # S % # + : ? # # # S S # % ,     % @ %       
-      : ,       , S @ @ @ @ @ @ # S # S S ; ; # # S # @ # S ,         ? # ,     
-                : # @ # @ @ @ @ @ @ @ # S S S # # @ S # @ *           , ; ,     
-                + @ # # @ @ @ # @ @ @ # # # # # # @ @ # # +                     
-                % @ # # @ % ; , ; ? S # @ # # @ # S @ @ @ +                     
-            , * % @ @ # +             , : + + + + # S % # @ % :                 
-          * % % # # ? :                           S *   , : ? S *               
-      , ? S S # % ;                               % :         , * +             
-,   : ? + , S +                                   ? ,             + ;           
-+ * ? :   * +                                     ? :               * :         
-  ,     , ? ,                                     + :               , + ,       
-        ; +                                       : :                 , ,       
-        * ;                                       , ;                           
-        , :                                         * :                         
-* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * 
-% % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+                                ; ,                     
+                              : # :                     
+                            : % *                       
+                          ; # @ * ,       , ,           
+                          + S * * S : ; % # # ? +       
+                          , , , + S @ @ @ # # @ # :     
+  , * + + + ; ; + * + ; + * ; ; % ? S # # S # # @ +     
+  , S S ? ? + # @ # @ # # S S : ? S S S # ? , : # %     
+    , ,     ? @ @ @ @ # # # % + S # # @ S ,     : % ,   
+          , S # # @ @ @ @ @ # # # # # @ ?               
+          ; # @ # + : : + ? % S S S # @ S :             
+      : * S # % :             , , * ? : * % + ,         
+    ; * S % ;                     ; ;       ; +         
+; + ; : * ,                       ; :         : ;       
+, ,   + ,                         , :           : ,     
+      +                             :                   
+, , : : : , , , , , , , , , , , , : + : , , , , , , , , 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % 
     </code></pre>
       </font>
-      <a href="/stop.html"><font color="#cccccc">stop the animation</font></a>
     </center>
   </body>
 </html>
