Updated text and links

--- a/site/about.html
+++ b/site/about.html
@@ -13,6 +13,8 @@
         ><font color="#cccccc" size="2">Chrome Version</font></a
       >
       <font color="#777777" size="2"> ~ </font>
+      <font color="#cccccc" size="2">about</font>
+      <font color="#777777" size="2"> ~ </font>
       <a href="https://www.alanwsmith.com/"
         ><font color="#cccccc" size="2">alanwsmith.com</font></a
       >
@@ -33,29 +35,34 @@
             <font color="#cccccc">
               <p>
                 This piece is an experiment in creating an animation using only
-                HTML. There is no JavaScript, CSS, or images involved
+                HTML. There is no JavaScript, CSS, or images involved.
               </p>
 
               <p>
                 The frames consists of ascii art based on &quot;<a
                   href="https://en.wikipedia.org/wiki/The_Horse_in_Motion"
                   ><font color="#cccccc">The Horse in Motion</font></a
-                >&quot; by Eadweard Muybridge. Animation between frames is done
-                with `&lt;meta http-equiv=&quot;refresh&quot;&gt;` tags. As of
-                April, 2022, Safari and Firefox require whole seconds for the
-                refresh. So, the
+                >&quot; made by Eadweard Muybridge in 1878. Each frame is a
+                separate HTML page. Animation between pages is done with
+                `&lt;meta http-equiv=&quot;refresh&quot;&gt;` tags.
+              </p>
+              <p>
+                As of April, 2022, Safari and Firefox require whole seconds for
+                the refresh. So, the
                 <a href="/frames/1.html"
                   ><font color="#cccccc">basic version</font></a
                 >
-                is a set of eight frames running at 1FPS
-              </p>
-              <p>
-                Chrome allows refresh times less than a second.
+                is a set of eight frames running at 1FPS. Chrome allows refresh
+                times less than a second.
                 <a href="/frames-chrome/1.html"
                   ><font color="#cccccc">That version</font></a
                 >
-                is sixteen frames set to change every 0.2 seconds which runs at
-                roughly 5FPS depending on the computer, network, etc...
+                is sixteen frames set to change every 0.1 seconds which runs at
+                roughly 10FPS depending on the computer, network, etc...
+              </p>
+              <p>
+                The pages are very light, but there may be some delay and a
+                little flash between frames if you&apos;re on a slow connection.
               </p>
               <p>
                 This site is the forth in a series inspired by
@@ -66,16 +73,25 @@
                 from
                 <a href="https://twitter.com/whitep4nth3r"
                   ><font color="#cccccc">whitep4nth3r</font></a
-                >. The other sites are:
+                >. The other sites have
                 <a href="https://ascii-art.alanwsmith.com/"
                   ><font color="#cccccc">ascii art</font></a
-                >,
-                <a href="https://pixel-art.alanwsmith.com/"
-                  ><font color="#cccccc">pixel art</font></a
-                >, and a
+                >, a
                 <a href="https://html-maze.alanwsmith.com/"
                   ><font color="#cccccc">maze</font></a
+                >, and
+                <a href="https://pixel-art.alanwsmith.com/"
+                  ><font color="#cccccc">pixel art</font></a
                 >
+                (which is my other favorite).
+              </p>
+              <p>
+                Here&apos;s
+                <a
+                  href="https://github.com/alanwsmith/html-animation.alanwsmith.com"
+                  ><font color="#cccccc">the source code</font></a
+                >
+                if you&apos;re interested.
               </p>
             </font>
           </td>
