--- a/site/frames-chrome/15.html
+++ b/site/frames-chrome/15.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0.2;URL='16.html'" />
-    <meta http-equif="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
+    <meta http-equiv="refresh" content="0.1;URL='16.html'" />
+    <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation - Chrome</title>
   </head>
   <body bgcolor="#06113C">
@@ -11,6 +11,8 @@
         <font color="#cccccc" size="2">Safari/Firefox Version</font></a
       ><font color="#777777" size="2"> ~ </font>
       <font color="#cccccc" size="2">Chrome Version</font>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/about.html"><font color="#cccccc" size="2">about</font></a>
       <font color="#777777" size="2"> ~ </font>
       <a href="https://www.alanwsmith.com/"
         ><font color="#cccccc" size="2">alanwsmith.com</font></a
@@ -30,11 +32,12 @@
         <tr>
           <td width="440">
             <font color="#cccccc">
-              This version of the animation works with Chrome browsers that
-              accept floating point numbers for the meta refresh. You can read
-              more about how this works
-              <a href="/about.html"><font color="#cccccc">here</font></a> (you
-              may have to click the link a few times to get it to work)
+              This piece is an experiment in creating an animation using only
+              HTML. There is no JavaScript, CSS, or images involved. You can
+              read more about it
+              <a href="/about.html"><font color="#cccccc">here</font></a
+              >. (Becasue of the refresh speed you might need to close the
+              browser to stop it if the links don&apos;t work.)
             </font>
           </td>
         </tr>
