--- a/site/frames/3.html
+++ b/site/frames/3.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="1;URL='4.html'" />
-    <meta http-equif="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
+    <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation</title>
   </head>
   <body bgcolor="#06113C">
@@ -12,6 +12,8 @@
       <a href="/frames-chrome/1.html"
         ><font color="#cccccc" size="2">Chrome Version</font></a
       >
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/about.html"><font color="#cccccc" size="2">about</font></a>
       <font color="#777777" size="2"> ~ </font>
       <a href="https://www.alanwsmith.com/"
         ><font color="#cccccc" size="2">alanwsmith.com</font></a
@@ -34,7 +36,13 @@
               This piece is an experiment in creating an animation using only
               HTML. There is no JavaScript, CSS, or images involved. You can
               read more about it
-              <a href="/about.html"><font color="#cccccc">here</font></a>
+              <a href="/about.html"><font color="#cccccc">here</font></a
+              >. If you're using chrome
+              <a href="/frames-chrome/1.html"
+                ><font color="#cccccc"
+                  >click here for a smoother version</font
+                ></a
+              >
             </font>
           </td>
         </tr>
@@ -62,12 +70,7 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
     </code></pre>
       </font>
-      <font color="#cccccc" size="2">
-        If you're using chrome
-        <a href="/frames-chrome/1.html"
-          ><font color="#cccccc">click here for a smoother version</font></a
-        >
-      </font>
+      <font color="#cccccc" size="2"> </font>
     </center>
   </body>
 </html>
