--- a/site/frames/index.html
+++ b/site/frames/index.html
@@ -1,83 +1,76 @@
 <!DOCTYPE html>
 <html>
   <head>
-    HTML Animation Frame
+    <meta http-equiv="refresh" content="1;URL='2.html'" />
+    <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
+    <title>HTML Animation</title>
   </head>
-  <body>
-    <pre><code>
+  <body bgcolor="#06113C">
+    <center>
+      <font color="#cccccc" size="2">Safari/Firefox Version</font>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/frames-chrome/1.html"
+        ><font color="#cccccc" size="2">Chrome Version</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/about.html"><font color="#cccccc" size="2">about</font></a>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="https://www.alanwsmith.com/"
+        ><font color="#cccccc" size="2">alanwsmith.com</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
 
-,:::::::::::::::::::::,,,,,,:::::,,,,,,,,::,,,,,,::::::::::,,,,::::,,:,:::,,,,,,,,:,,,,,,,,,,,,,,,,,
-,:::::::::::::::::::::,,,,,,,,:,,,,,,,,,,::,,,,,,:::::::::::,,,,::::::::::,,,,,,,,,,,,,,,,,,,,,,,,,,
-,:::::::::::::,::::::::,,,,,,,:,:,:,,,,,,:::,,,,,:,:::::::::,,,,,,,,:,,,::,,::,,,,,,,,,,,,,,,,,,,,,,
-,:::::::::::::::::::::::,,,,,,::::::,,,,,:::,,,,:::::::::::::,,,,,::::,,:::::::,,,,,,,,,,,,,,,,,,,,,
-,:::::::::,:::::,::::::::,,,,,::::::,,,,:::::,,,:::::::::::::,,,,,:::::::,::::::::,,,,:,,,,,,,,,,,,,
-,::::::::::,:::::::::::::,::,::::::,,,,,,::::,,,,::::::::::::,,,,,,:::::::::::::,,,,,::,,,,,,,,,,,,,
-,:::::::,::,:::::::::::::,:,,::::::,,,,::,:::::,,,:::::::::::,:,,,,::::::::::::::,,,,:,,,,,,,,,,,,,,
-,::::,:::::::::::::::::::::,,:::::::,,,:,,,:::,,,,:::::::::::,,,,,,:::::::::::::,,,,,,,,,:,,,,,,,,,,
-,:::::::::::::::::::::::,::,,:::::,,,,:,:,,:::,,,,:::::::;:::,,,,,,,::::::::::::,,,::,::::::,,,,,:,,
-,:::::::::::::::::::::::,,:,,::::::::,,,:,:::,,,,,::::::;;:::;?*:,:,:::::::::::::,,:,,:::::::,:,:::,
-,::::::::::::::::::::,,:,::::::::::::,,::,:::,:,,,,::::::::,;S%?*:,::::::::::::::,,,,,:::::::,:,:,:,
-,::::::::::::::::::::::::::::::::::::,:,:,:::,:,,,,::::::::,?@#SS%::::::::::::::,,,,,,:,,::::,,,:,:,
-,::::::::::::::::::::::::::::::::::::::,,:::::,,,,::::::::;:%##SS%+:::::::::::::,,,,,,:,:::,::,,:,::
-,:::::::::::::::::::::::::::::::::::::,:::::::,,,,:::;::::::*#SS#;,::::::::::::::,,,,,:::::,,:,,,:,:
-,:::::::::::::::::::::::,:::::::::::::::::::::::,,:,:;::;;:*SSS%S;,::::::::::::::::,,,:::::,,:,,::,,
-,::::::::::::::::::::,::,:::::::::::::,::::::::,,,::::::::?S?S#@%,::::::,:::::::::::,,,::::,,:,,:,,:
-,::::::::::::::::::::::::::::::::::::::::::::::,:,:::::,:?#S%SS*:,::::,::::::::::::::::::::,::,,:,::
-,:::::::::::::::::::::::::::::::::::::::::::::,:,,::::::SS%%%*;.,,::::::::::::::::,*;,::::::::,::,::
-,::::::::::::::::::::,::::::::::::::::::::::::::,:::::;S@#%%%?+,,,,:::::::::::,:::;S#+,:::::::::,:,,
-,::::::::::::::::::::::::::::::::::::::::::::::::::::;#@@#S??%S:,:::;::::::::;;;;?SS##+,::::::::,:,,
-,:::::::::::::::::::::::::::::::::::::::::::::::,:;::S######%%S+,::::;::::::;%@S#@@#S#S;::::::::::,:
-,:::::::::::::::::::::::::::::;:::::::::::::::::::::S@S##S#@#%%%:,:::;;::::+S@@#@#S??%%S;::::::::,::
-,::::::::::::::::::::::::::::::::;::::::::;::::::::%####S##@@#%#*,,::;;;::,+#@#####S%%SSS;:::::::::,
-,:::::::::::::::::::::::::::,::::;:::::::::::::::::%#@###S#@*%#S#*,:;;;:;*?#@##SS####S#SS#;::::::::,
-,::::::::::::::,,:::::::::::,::;:::::::::::;::;::::++*S#@##*,;SSS#+:;::*#@@@###S###SS?##S#S::::::::,
-,::::::::::::::,,,:::::::::::::;+:::::::;::::::::::;;::;+?+,:,;SSS%*::*@@@#SS##S#@#S#SS%SS#?::::::::
-,::::::::::::::,,::,::::::::::;:;:;:::::::::::::::;;:;;:::;:::,,*##@?+#@@#S#S####@###SSSSSS#+,::::::
-,::,:::::::::::::::::::::::::::::::;?%%?+;;::::::::+;+;:;:;;+++*?@#@@SS#########@##@#S#SS#S%%;,:::::
-,::,::::::::::;;:::::::;::::::::;*S#####@@##%??;?%;**+;;;::+#@@@@###@@#SSS####S##S##S#SSSS%%S%::::::
-,:,,:::::::::;+;:;::::,:::::,:+?S##S#####@@@@@@@@@#S#S?+;;::+#@##@##@@@@#%###S#SSS?++S#SSS%SS#?:::::
-,:,:::::::::***+++*???????**?S####S%S#@##@###@@@@@@SS@@S?+;;:*S??S###S#####SS%S#%;.,.,;?SSS%?S#S;:::
-,::::::;:::*@@@S#S#@@@@@@@@@@#S###SS####@@#SS##@@@@@#@@@#S*;;:*%*%SSSSSS##SS%?SS;.,,,,:;???%SS#%::::
-,::::,:;::,?@@@@@@##@@@###S++SS###@#####@@#SS@####%%S%%S@@S++;:%%?*+?%S?%%?*%%?*,:,::;;;,,:%%?S*,:::
-,::,:,::,::?S####@##@S#S%@%:+SSSS##@#@##@#@@@#%%%????%%%#@@?+;;S%?+*%?%%SS???S#;,::,:,,,,,.+S+;:::::
-,:,::,:::,:%%%%SS#@#?:%*+S%*%%SSS###S##S###@@S?%S%%?????@#%%;;;S%?**%S#SSS%%%#+,,,::,,,,,,,,:,,,::,:
-,:,::,:::::%%??%SSS+::;;::;+%%##SS%%%%S%S##@#SSS@#S%?%%S@%?*;;*%S**?S##S#%%S#%,,::::,,,,,,,,,,,,::::
-,:,,:,:,,,,;??%SS%:,,::::,,;%%###SS%%%%?%###S#####@%?%S#S*S+;;*%%**+?##S%%S#@+,::::,,,,,,,,,,,,,::::
-,:,,:,:,,,:,+??*+,,,,,:::::;%%SS#S%%%%%?%##S#@@#@@@S?%##?*#*;:+S???+*SS%SS##%,:::::::,:,,,,,,,::,::,
-,:,,:,:,:,,,:+;,,:,,:::::::;SSS#S#S%S%?%S####@@#####%SSS??@#S%%SS%%?%S*?%SS%:,:::,:::,,,,,,,:,:::::,
-,:,,:,:,,:::,,,,,,,,::::::::?#S#S##S%%??SSS#######SSS#S#%%@@@#SS#%S%?%+?%S%:,::::::::,,:,,,,:,:::::,
-,:,,:,:,,::,,,,,:::::,::::::,?#S##SSSS%?%%%S@@#######S##SS@######SS%??*%%S+:::,::::::,,,,,,,:,,::::,
-,:,,,,,,,,,,,,,,,,,:::::::::,:S#SSSS##%?%SS#S#@#####SS##%#@##@####S%%*?SS+,:,:,::,:,,,,,,,,,:,,::::,
-,:::,,,,,,,,,,,,,,,,:::::::::,,%#S#SSSS%SS#%,;%#@###@###S#@###S####%??%#*,::,:,,:::,,,,,,,,,,,,,::,,
-,,,,::,:,,,:,,,,,::,::::::::,:*SSSSSSSSS#@#;,,,;?#@@@###S#@#@S%#@S#S??S#:,:::::::::::,::,,,,:,,,:,,,
-,,,,,:,,,,:::,:,,:::::::::;+%##S%S%%SS#?S#;,,:,,,:*S####S#@@#%######SS#?,::,::::,,:,,,:,,,,,,:,,,,,:
-,:,,,::,,,,,,::,:,,,,,:::?####SSSS%%*?%%#;,::,,,,,,,:+S##@#SS%#SS#SS##S:,,,,::,,,:,,,,:,,,,,,,,,,,,:
-,:::::::,,,:,::,::,:,::::@@SSS#%?*;+*?S#;,,,:,::,,,,,,,;*S##S#########+,::,,::::::,:,::,,,,,,,,,,,,,
-,::::::::::::::::::::::::+@##S;,..+SS#S;,,,:::::,,,,::,,,:*SS#S###S#?:,,,:,,::::::,:,,,,,,,,,,,,,:,,
-,,,,:::,::::::::,::::::::.+S#?.,,*S#SS:,,,::::::,,,,,,,,,,.*#SSS##?;,.,,,,,:::,,:,,,,,::,,,,,,,,,:,,
-,,,,:::,::,:::::,::::::,:,,;SS+.+#SSS+,,,::::::::,,,,,,,,,,%#SS%S*,,.,,,,::::,,::::,,,::,,,,,,,,,,:,
-,,,:,::,,,,,,::::::::::,::,.;SS+%#SSS:,,::::::::::,,,,,,,,?@##S;S+,,,,,,,::,:,,:,,:,,,,,,,,,,,,,,,,,
-,,,,,:::,,,::::,,:,,:,:,:::,,:SS**%S%%+,,::::,,:,::,,,,,.*#S#S;?@;,,,,,,,,,,::::,,,::,,,,,,,,,,,::,,
-,,,,,:::,,,,,,::,,,,,,,,,,,:,.;S?,,;%S#%;,,,,,,,,,,,,,,.+#SSS;*##;,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,:::,,,,,:::,,,,,,,,,,,,,,.;S%;.,;%@#?:,,,,,,:,,,,,:S##%:.+SS;,,,,,,,,:,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,::::,,,,,,,::,,,,,,,,,,,,,,,,+%?:,.,+S@#*:,,:,,,*S*+%SS%:.,:%S;,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,:,,
-,,,:,,,,,,,,,,::,,,,,,:,,,::,,,,,%%,,,,.:?#@?,,,,,,:+?S##?,,,,.*%+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,:::,,,,,,,,,,,:,,,,,,??,,,,,,,*#%,,,,:,,,S##%,.,,,.;%+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,,,,,:,,,,,:**,,,,,:,,?%,,,,,,.:#%S%+:,,,,+*+,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,::,,,,,,,,,,,,,,,,,,,,,,,,,,,,;*;.,,,,,,.+?:,,,,.:S#%?#S#S%SS%?;,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,:,,,,,,,,,,,,,,,,,,,,,,,,,,,,++,.,.,,,,,;*:,,,,:S@?,.;++++**?;.,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,:,.,,,,,,,,:+,,,,*@#;.,.......,.,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,;,.:%@#:.,,,.,,,,,,,,,,,,.,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,+S@S:,,,.,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,#@S,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,::,,,,,,,,,,:,,,,,,,,,,,,,:,,,,;@S:,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,,,,,:,,,,,,,,,,,,,,,,;?#%,,,::,,,,,,,,,,,,,,,..,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,:,,,,,,,,,,,:,,,,,,,,,,,,:,,::,,,,,,,,,,,,?SS,,::;;,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,,,,,,,,,,,,,,,:,,,,,,,,,,,,,,?S:.,;;;;;:,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-,,,,,,,,,,,,,,:,,,,,,,,,,,:,,,,,,:,,,,,,,,,?+,::;;;;;;:,,,,,,,,,,,,,,.,,,..,,,,,,,,,,,,,,,,,,,,,:,,,
-,,,:::::;,::::,::::::::::;;;;++;;;;:::;:::+*;;;+;+*****;:::::::::;::::;:,:::::::::,,,,::::::::;::;;;
-:+;+;;:*?;;+;+;++++++++++**+***++++;;;;;;+;;++******?***++++;;;;++;;;;;::;;;;;;;+;:;;;;;+;;;;++;++++
-:++++++S+;++;+++++++++++++++*++++++++++++*++*+*+++++++++++;;++;++;;+;;;;;;;;;+++++++++++++++++++**+*
-  </code></pre>
+      <a href="https://links.alanwsmith.com"
+        ><font color="#cccccc" size="2">links</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
+      <a href="https://podcast.alanwsmith.com"
+        ><font color="#cccccc" size="2">podcast</font></a
+      >
+      <br />
+      <font color="#777777" size="2"> ------ </font>
+      <table>
+        <tr>
+          <td width="440">
+            <font color="#cccccc">
+              This piece is an experiment in creating an animation using only
+              HTML. There is no JavaScript, CSS, or images involved. You can
+              read more about it
+              <a href="/about.html"><font color="#cccccc">here</font></a
+              >. If you're using chrome
+              <a href="/frames-chrome/1.html"
+                ><font color="#cccccc"
+                  >click here for a smoother version</font
+                ></a
+              >
+            </font>
+          </td>
+        </tr>
+      </table>
+      <font color="#dddddd" size="1">
+        <pre><code>
+    
+                                                        
+                                , * :                   
+                                ; # ;                   
+                              + % +         , ;         
+                            ; # # ? ,   , * S S *       
+                    ,       ; * + + ? ; S # # # # *     
+      , , , : : ; ? S % ? ? ? + ; ? # # # # S ? % S +   
+      ? # # % ? S # # @ # # S # ? * ? S S % :   , + +   
+      + ? : , : S S % S # # % S ? * ? % S *             
+                ? # % S # # # S # # S ? ? ,             
+              : ? S S % : + % S # # # % :               
+              ? * * ? ,       , * # % ;                 
+              , ; * + ,       , ? % :                   
+                , ; , + ;   , ? + ; :                   
+                  :     ; , + + ; ; ,                   
+                        , * :                           
+, , , , , , , , , , , : * ; , , , , , , , , , , , , , , 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+    </code></pre>
+      </font>
+      <font color="#cccccc" size="2"> </font>
+    </center>
   </body>
 </html>
