--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <meta http-equiv="refresh" content="1;URL='frames/2.html'" />
+    <meta http-equif="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation - No JavaScript, CSS, or Images</title>
     <meta
       property="og:title"
@@ -89,96 +88,72 @@
       sizes="180x180"
       href="/favicons/180x180.png"
     />
-
-    <style>
-      body {
-        margin: 0;
-        padding: 0;
-        min-height: 100vh;
-        display: grid;
-        grid-template-rows: auto 1fr auto;
-      }
-      header {
-        padding-top: 18px;
-        padding-bottom: 4px;
-        width: 100%;
-        max-width: 64ch;
-        margin: 0 auto;
-        border-bottom: 1px solid #888;
-      }
-      main {
-        width: 100%;
-        max-width: 64ch;
-        margin: 0 auto;
-      }
-      footer {
-        width: 100%;
-        max-width: 64ch;
-        margin: 0 auto;
-        text-align: center;
-        margin-top: 60px;
-        padding-bottom: 12px;
-        font-size: 0.9rem;
-      }
-      a {
-        text-decoration: none;
-      }
-      .pallet1 {
-        background-color: #6b705c;
-        color: #ffe8d6;
-      }
-      .pallet1 a {
-        color: #b7b7a4;
-      }
-      .pallet1 footer {
-        color: #a5a58d;
-      }
-    </style>
-
-    <script type="text/javascript">
-      function doStuff() {
-        console.log('doing stuff')
-      }
-      document.addEventListener('DOMContentLoaded', doStuff)
-    </script>
   </head>
-  <body>
-    <script type="text/javascript">
-      document.body.className = 'pallet1'
-    </script>
-    <header>
-      <a href="https://www.alanwsmith.com/">alanwsmith.com</a> ~
-      <a href="https://links.alanwsmith.com">links</a> ~
-      <a href="https://podcast.alanwsmith.com/">podcast</a>
-    </header>
-    <main>
-      <h1>Static Starter</h1>
-      <ul>
-        <li>
-          This page is a basic starter HTML Template for use without frameworks
-        </li>
-        <li>
-          Right now, it&apos;s focused on the favicons and Open Graph (OG)
-          Images in the &lt;head&gt; of the document
-        </li>
-        <li>It has a sticky footer that's done with 'grid-template-rows'</li>
-        <li>
-          A script sets the style for the body tag which sets the color. (More
-          will be added over time)
-        </li>
-      </ul>
-      <p>
-        <a href="https://github.com/alanwsmith/static-template.alanwsmith.com"
-          >Source code</a
-        >
-      </p>
-    </main>
-    <footer>
-      made by <a href="https://twitter.com/TheIdOfAlan">alan w. smith</a>
+  <body bgcolor="#06113C">
+    <center>
+      <font color="#cccccc" size="2">Safari/Firefox Version</font>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/frames-chrome/1.html"
+        ><font color="#cccccc" size="2">Chrome Version</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
+      <a href="/about.html"><font color="#cccccc" size="2">about</font></a>
+      <font color="#777777" size="2"> ~ </font>
+      <a href="https://www.alanwsmith.com/"
+        ><font color="#cccccc" size="2">alanwsmith.com</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
+
+      <a href="https://links.alanwsmith.com"
+        ><font color="#cccccc" size="2">links</font></a
+      >
+      <font color="#777777" size="2"> ~ </font>
+      <a href="https://podcast.alanwsmith.com"
+        ><font color="#cccccc" size="2">podcast</font></a
+      >
       <br />
-      who has a <a href="https://www.alanwsmith.com">website</a> and a
-      <a href="https://podcast.alanwsmith.com/">podcast</a> <br />
-      among other <a href="https://links.alanwsmith.com">things</a>
-    </footer>
+      <font color="#777777" size="2"> ------ </font>
+      <table>
+        <tr>
+          <td width="440">
+            <font color="#cccccc">
+              This piece is an experiment in creating an animation using only
+              HTML. There is no JavaScript, CSS, or images involved. You can
+              read more about it
+              <a href="/about.html"><font color="#cccccc">here</font></a
+              >. If you're using chrome
+              <a href="/frames-chrome/1.html"
+                ><font color="#cccccc"
+                  >click here for a smoother version</font
+                ></a
+              >
+            </font>
+          </td>
+        </tr>
+      </table>
+      <font color="#dddddd" size="1">
+        <pre><code>
+    
+                                                        
+                                , * :                   
+                                ; # ;                   
+                              + % +         , ;         
+                            ; # # ? ,   , * S S *       
+                    ,       ; * + + ? ; S # # # # *     
+      , , , : : ; ? S % ? ? ? + ; ? # # # # S ? % S +   
+      ? # # % ? S # # @ # # S # ? * ? S S % :   , + +   
+      + ? : , : S S % S # # % S ? * ? % S *             
+                ? # % S # # # S # # S ? ? ,             
+              : ? S S % : + % S # # # % :               
+              ? * * ? ,       , * # % ;                 
+              , ; * + ,       , ? % :                   
+                , ; , + ;   , ? + ; :                   
+                  :     ; , + + ; ; ,                   
+                        , * :                           
+, , , , , , , , , , , : * ; , , , , , , , , , , , , , , 
+% % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+    </code></pre>
+      </font>
+    </center>
   </body>
 </html>
