Increated font size

--- a/site/frames-chrome/14.html
+++ b/site/frames-chrome/14.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="0.1;URL='15.html'" />
     <meta http-equiv="expires" content="Mon, 20 Jan 2025 11:12:01 GMT" />
     <title>HTML Animation - Chrome</title>
