--- a/scripts/page_builder/template_safari.html
+++ b/scripts/page_builder/template_safari.html
@@ -8,52 +8,53 @@
   </head>
   <body bgcolor="#06113C">
     <center>
-      <font color="#cccccc" size="2">Safari/Firefox Version</font>
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#cccccc">Safari/Firefox Version</font>
+      <font color="#777777"> ~ </font>
       <a href="/frames-chrome/1.html"
-        ><font color="#cccccc" size="2">Chrome Version</font></a
+        ><font color="#cccccc">Chrome Version</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
-      <a href="/about.html"><font color="#cccccc" size="2">about</font></a>
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
+      <a href="/about.html"><font color="#cccccc">about</font></a>
+      <font color="#777777"> ~ </font>
       <a href="https://www.alanwsmith.com/"
-        ><font color="#cccccc" size="2">alanwsmith.com</font></a
+        ><font color="#cccccc">alanwsmith.com</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
 
       <a href="https://links.alanwsmith.com"
-        ><font color="#cccccc" size="2">links</font></a
+        ><font color="#cccccc">links</font></a
       >
-      <font color="#777777" size="2"> ~ </font>
+      <font color="#777777"> ~ </font>
       <a href="https://podcast.alanwsmith.com"
-        ><font color="#cccccc" size="2">podcast</font></a
+        ><font color="#cccccc">podcast</font></a
       >
       <br />
-      <font color="#777777" size="2"> ------ </font>
+      <font color="#777777"> ---~--- </font>
       <table>
-        <tr>
-          <td width="440">
-            <font color="#cccccc">
-              This piece is an experiment in creating an animation using only
-              HTML. There is no JavaScript, CSS, or images involved. You can
-              read more about it
-              <a href="/about.html"><font color="#cccccc">here</font></a
-              >. If you're using chrome
-              <a href="/frames-chrome/1.html"
-                ><font color="#cccccc"
-                  >click here for a smoother version</font
-                ></a
-              >
-            </font>
-          </td>
-        </tr>
+        <tbody>
+          <tr>
+            <td width="540">
+              <font color="#cccccc">
+                This piece is an experiment in creating an animation using only
+                HTML. There is no JavaScript, CSS, or images involved. You can
+                read more about it
+                <a href="/about.html"><font color="#cccccc">here</font></a
+                >. If you're using chrome
+                <a href="/frames-chrome/1.html"
+                  ><font color="#cccccc"
+                    >click here for a smoother version</font
+                  ></a
+                >
+              </font>
+            </td>
+          </tr>
+        </tbody>
       </table>
-      <font color="#dddddd" size="1">
+      <font color="#dddddd">
         <pre><code>
     $the_ascii
     </code></pre>
       </font>
-      <font color="#cccccc" size="2"> </font>
     </center>
   </body>
 </html>
